# kaggle_titanic

./: pyproject.toml  spaceship_titanic.py  titanic.py
